Changes for SPECPROC-20 - Add period to TASK_REPEAT class

--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,10 +7,16 @@
 4+^h|*PROC Release 1.?.?*
 
 |[[latest_issue]]1.3.0
+|{spec_tickets}/SPECPROC-20[SPECPROC-20^]. Add `_period_` to `TASK_REPEAT` class..
+|M Kejžar, +
+ T Beale
+|[[latest_issue_date]]12 Apr 2019
+
+|
 |{spec_tickets}/SPECPROC-19[SPECPROC-19^]. Refine model of concurrency in `TASK_GROUP`: add class `CONCURRENCY_MODE`; improve explanation of `TASK_GROUP`; +
  Add `_concurrency_mode_ = xor_one_path` invariant to `CHOICE_GROUP`.
 |T Beale
-|[[latest_issue_date]]18 Mar 2019
+|18 Mar 2019
 
 |
 |{spec_tickets}/SPECPROC-18[SPECPROC-18^]. Support custom actions for callback receipt of events; +
