--- a/docs/UML/classes/task_repeat.adoc
+++ b/docs/UML/classes/task_repeat.adoc
@@ -6,7 +6,9 @@ h|*Class*
 2+^h|*TASK_REPEAT*
 
 h|*Description*
-2+a|Definition of repetition for a Task Item. The repeats attribute provides a constraint on a number of times. If not set, any number of repeats is allowed. The terminate_condition attribute defines when repetition should cease in terms of a condition, typically a subject-related variable.
+2+a|Definition of repetition for a Plan Item. The `_repeats_` attribute provides a constraint on a number of times. If not set, any number of repeats is allowed. The `_terminate_condition_` attribute defines when repetition should cease in terms of a condition, typically a subject-related variable.
+
+If `_period_` is set, this defines the duration between the start of each iteration at execution time. It has the effect at runtime of adding a `_wait_spec_` with a `TIMELINE_MOMENT` event to each `PLAN_ITEM` copy in the materialised form, i.e. creating the same structure as would have been created if the repetitions had been manually specified.
 
 h|*Attributes*
 ^h|*Signature*
@@ -19,4 +21,8 @@ a|Range of repetitions. If the lower limit is greater than zero, at least one re
 h|*0..1*
 |*terminate_condition*: `PLAN_EVENT`
 a|States a condition for when repetition should stop.
+
+h|*0..1*
+|*period*: `Iso8601_duration`
+a|Optional period of repetition, i.e. duration between the commencement of each `PLAN_ITEM` clone in the materialised form.
 |===
