--- a/docs/task_planning/master04-design.adoc
+++ b/docs/task_planning/master04-design.adoc
@@ -4,11 +4,11 @@ The following sections describe the design key ideas used in the Task Planning m
 
 == Computational Basis
 
-A basic choice in the architecture presented here is that it is _executable_ in the sense of all elements used in creating Plan definitions have an objective computational meaning and can be executed according to defined semantics. The intention is that developing task plans is a kind of high level programming, performed using dedicated tools, and whose resulting artefacts are executable. This does not of course mean that the resulting system performs the work (although it may indeed perform some particular tTasks). Instead, it means that the resulting executable artefacts and application(s) when executed in a real world socio-technical environment that includes human and other actors, will convert disparate workers with weak communication and coordination into an efficient, integrated, whole.
+A basic choice in the architecture presented here is that it is _executable_ in the sense of all elements used in creating Plan definitions have an objective computational meaning and can be executed according to defined semantics. The intention is that developing task plans is a kind of high level programming, performed using dedicated tools, and whose resulting artefacts are executable. This does not of course mean that the resulting system performs the work (although it may contain software agents that perform some particular Tasks). Instead, it means that the resulting executable artefacts and application(s) when executed in a real world socio-technical environment that includes human and other actors, will convert disparate workers with weak communication and coordination into an efficient, integrated, team.
 
-This follows the YAWL <<Hofstede_van_der_Aalst_2009>> rather than BPMN approach, such that no Plan defined according to this specification has ambiguous meaning.
+This follows the YAWL <<Hofstede_van_der_Aalst_2009>> approach, such that no Plan defined according to this specification has ambiguous meaning.
 
-== Computational Context
+== Computation Context
 
 This specification describes the models and semantics for task plans and their execution by a notional openEHR Task Planning execution engine ('TP engine'). This is assumed to operate in a server computing environment in which other systems exist with which the TP engine communicates. A key system is the openEHR EHR system, via which openEHR EHRs are accessible to the TP Engine. 
 
@@ -26,7 +26,7 @@ One of the major differences between the openEHR Task Planning architecture comp
 
 === Separation of Definition and Execution
 
-One of the basic tenets of workflow processing is assumed here, namely the clear separation of Plan definition and Plan execution. This specification distinguishes more than the usual two levels of representation, as follows:
+One of the most basic tenets of workflow processing is assumed here, namely the clear separation of Plan definition and Plan execution. This specification distinguishes more than the usual two levels of representation, as follows:
 
 * Plan _template_, representing re-usable Plans and Plan components, from which Plan 'definitions' can be generated;
 * Plan _definition_, the concrete representation of a particular Plan that may be directly executed;
@@ -43,18 +43,18 @@ The top-level formal concept defined is the _Work Plan_, which consists of one o
 
 Within a Work Plan, each included Task Plan is a definition of work to be performed in a single work _context_, by a 'principal performer' and possibly other participants. Multiple Task Plans occur for two reasons:
 
-* distinct performers working in different contexts, across which managed _handoffs_ are required;
+* distinct performers working in different contexts, across which managed _hand-offs_ are required;
 * _sub-plans_ subordinate to a parent Task Plan, to be performed by the same worker. 
 
 Sub-plans occur to allow re-use of Plans for smaller pieces of work and also to provide a means of controlling the detail level of work differently for performers of different experience levels.
 
-The entirety of the Work Plan definition is assumed to be _executable within a single computational context_ (e.g. a 'Task Planning engine'), in which methods of notification and worker communication are available, enabling the state of progress of the work defined in the Plan to be fully represented. A Work Plan will often be limited to a single enterprise, but this need not be the case, as long as all of its Task Plans communicate within the same Plan execution context. 
+The entirety of the Work Plan definition is assumed to be _executable within a single computational context_ (i.e. a 'Task Planning engine'), in which methods of notification and worker communication are available, enabling the state of progress of the work defined in the Plan to be fully represented. A Work Plan will often be limited to a single enterprise, but this need not be the case, as long as all of its Task Plans communicate within the same Plan execution context. 
 
 More typically, some jobs required by a Work Plan are performed in another organisational context entirely, and from the point of view of the original Work Plan, the second organisation is seen as a 'black box' to which a request can be made and a result might be returned. A common example is a hospital clinical workflow that at some point requires a laboratory result, which is processed by an external organisation. These situations are handled by an 'external request' Task type.
 
 === Task Plan
 
-The actual definition of work to be done, i.e. Tasks, is stated within a Task Plan. The most basic structuring notion required is that of a sequential list of Tasks, enabling the representation of the set of steps in a typical linear workflow such as making tea or cleaning a wound.
+The actual definition of work to be done in one work context with a principal performer consists of Tasks stated within a Task Plan. The most basic structuring notion required is that of a sequential list of Tasks, enabling the representation of the set of steps in a typical linear workflow such as making tea or cleaning a wound.
 
 However, in the real world, almost every job can be sub-divided into smaller pieces of work in a fractal nature. This simple fact requires that the general structure of Tasks is actually a hierarchy, within which sequential Task lists occur commonly (and will be the top-level structure in simple cases). The formal construct provided for this is the Task Group, which may contain Tasks and more Task Groups.
 
@@ -120,23 +120,37 @@ Continuous knowledge of the work, and continuous real-time communication with on
 
 Since parallelism is possible within a single Plan, a performer may be working on more than one thing at once, within the same context, for the subject. In other words, a work context (and a Task Plan in execution) may contain multiple execution paths at a point in time.
 
-=== Context Switching and Forking
+=== Context Switch and Fork
 
-If work has to be stopped within one context and passed to a different work context, a _context switch_ is required, and the first worker or team will wait for a response. If the context switch is within the same Work Plan, it is termed a _handoff_, which entails switching Task Plans. A context change is also required to request work from an environment external to the current Work Plan. A second kind of change of control is a _context fork_, whereby the current performer signals to another context to start doing some work, but continues doing his own work. 
+If work has to be stopped within one context and passed to a different work context, a _context switch_ is required, and the first worker or team will wait for a response. If the context switch is within the same Work Plan, it is termed a _hand-off_, which entails switching Task Plans. A context change is also required to request work from an environment external to the current Work Plan.
 
-A context switch is commonly known as 'block and wait' or _synchronous processing_, while the context fork is known as _asynchronous_ or _parallel processing_.
+A second kind of change of control is a _context fork_, whereby the current performer signals to another context to start doing some work, but continues doing his own work. 
 
-Work context is maintained during a _work session_ during which the work is done by one or more performers. But if the work extends over hours or days (e.g. chemotherapy), worker shifts will end and the work will be taken up by new workers, or perhaps the same workers on the next day. The Task Planning model does not consider this kind of worker replacement to be a context switch, since it is assumed that the Task Planning runtime system maintains all relevant context information, available for use by new workers. All that is required to maintain the context is for de-allocation and re-allocation of the work to new performers.
+A context switch is commonly known as 'block and wait' or _synchronous processing_, while a context fork is known as _asynchronous_ or _parallel processing_.
 
-The following diagram shows the taxonomy of task types that result from the above considerations.
+The following diagram shows a taxonomy of task types that result from the above considerations.
 
 [.text-center]
 .Task Taxonomy
 image::{diagrams_uri}/task_taxonomy.svg[id=task_taxonomy, align="center", width=50%]
 
+How does a hand-off actually work? There are two distinct scenarios. Consider a hand-off situation in which one worker is a radiographer taking images of the patient, and who once finished, will hand over to a radiologist, who will assess the images. In this case, the inputs required by the radiologist - the images - are immediately available online, so she can begin her work immediately. The hand-off can therefore be effected by means of notification to the radiologist. In terms of control flow, the radiologist (at least in situations like Emergency Department, acute stroke case) is driven by events: as soon as new images are ready, she works on them. Accordingly, in terms of Task Plans, when the radiographer has completed his Task Plan (doing the imaging), the radiologist is notified, and her acceptance of the work will cause the relevant Task Plan to be activated.
+
+A second common scenario is typified by the first worker being a reception staff-member who receives a patient in a (non-emergency) clinic. When he has completed the usual appointment and administrative record check, he tells the patient to wait in the waiting area for the doctor. The hand-off to the doctor in this case entails the patient (i.e. the 'subject') being physically available when the doctor is ready, and the doctor having the patient visible on a list. The control flow in this case is: the second worker processes his patients from the queue, and will see a particular patient when they get to the head of the queue. Consequently, there is no point in notifying the doctor as such; instead, the latest patient is added to the queue, and seen by the doctor in his turn.
+
+We can state the general question as being when the second worked in a hand-off should commence his work. It could be:
+
+* immediately - this will be the case of a radiologist reviewing an MRI for an acute stroke;
+* when the worker is ready - e.g. the case where it's a GP working through a list of patients in a waiting room;
+* when the patient arrives - e.g. when a patient is sent for a transfusion, the transfusion unit should start on the patient as soon as he/she appears in that part of the hospital.
+
+=== Context Continuity over Worker Shifts
+
+Work context is maintained during a _work session_ during which the work is done by one or more performers. But if the work extends over hours or days (e.g. chemotherapy), worker shifts will end and the work will be taken up by the same or new workers on the next day. The Task Planning model does not consider this kind of worker replacement to be a context switch, since it is assumed that the Task Planning runtime system maintains all relevant context information, available for use by new workers. All that is required to maintain the context is for de-allocation and re-allocation of the work to the new (i.e. replacement) performers.
+
 === Principal Performer
 
-Following the notion of work context desscribed above, a Task Plan is defined to have a _principle performer_, that is to say, a single logical executing actor. This is often a single person (or a device or possibly a software service), but might equally be a group of personnel, e.g. ward nurses, who execute the steps of a Task Plan during and across shift boundaries (wound dressing, turning patients, IV maintenance etc). In these cases the separate individuals constitute a 'single mind' as described above, with respect to the subject of care and the work, and their communication is not directly represented within the Task Plan.
+Following the notion of work context described above, a Task Plan is defined to have a _principle performer_, that is to say, a single logical executing actor. This is often a single person (or a device or possibly a software service), but might equally be a group of personnel, e.g. ward nurses, who execute the steps of a Task Plan during and across shift boundaries (wound dressing, turning patients, IV maintenance etc). In these cases the separate individuals constitute a 'single mind' as described above, with respect to the subject of care and the work, and their communication is not directly represented within the Task Plan.
 
 In addition to the principal performer, other _participations_ can be specified for any contained Task in a Plan. This allows the Plan to indicate where specific members working in a single cognitive work context should be responsible for specific individual Tasks. However it is assumed that the principal performer is _responsible_ for all actions, and is also the notifier of action completions and cancellations.
 
@@ -177,38 +191,45 @@ Task Plans are defined, refined and used in various phases in time. A number of 
 
 |Design time             |*Definition model* +
                           (archetypes and templates +
-                          of definition classes)     |At the _model_ level, a Work Plan and its constituent Task Plans are represented in the form of openEHR
-                                                      templated archetype(s) based on the Task Planning definition model of this specification.
+                          of definition classes)     |At the _model_ level, a Work Plan and its constituent Task Plans are represented in the form of 
+                                                      openEHR templated archetype(s) based on the Task Planning definition model of this specification.
                                                       
                                                       Multiple layers of modelling may be used to represent a range of Plan Templates from the more 
                                                       general to the specific, and then templated to define a _near subject-specific Plan_. For example
-                                                      a general model may be built to represent a 'chemotherapy' Plan; a specalised form of this may 
+                                                      a general model may be built to represent a chemotherapy Plan; a specalised form of this may 
                                                       represent R-CHOP protocols; an even more specialised one may represent a particular institution's
                                                       form of this protocol. 
 |Clinical time - +
  planning               |*Instantiated definition* +
+                         (= one subject) +
                          (instances of definition +
-                          classes)                   |When a Work Plan model is _used_ for a subject (i.e. patient), it is _instantiated_ from its archetypes,
-                                                      creating instances of the Task Planning definition model (i.e. in the class/instance sense), and the result is understood as the _concrete_ definition of the Work Plan to be used in a specific situation for a specific subject (i.e. patient). At instantiation time, Task Plans re-used by reference within a Work Plan at the archetype level are instantiated as distinct instances for each such  reference.
+                          classes)                   |When a Work Plan model is _used_ for a subject (i.e. patient), it is _instantiated_ from its templated                                     archetypes, creating an instance of the Work Plan definition (i.e. in the class/instance sense). 
                                                       
-                                                      After Work Plan instantiation, the planner may adjust it in any way that maintains conformance with its archetypes and template, e.g. to provide values for particular parts of the model such as medication dosages, that correspond to the particular patient.
+                                                      At instantiation time, Task Plans re-used by reference within a Work Plan at the archetype level are instantiated as _distinct instances_ for each such reference.
+                                                      
+                                                      After Work Plan instantiation, the planner may adjust it in any way that maintains conformance with its archetypes and template, e.g. to provide values for particular parts of the model such as medication dosages, that correspond to the particular subject.
 |Clinical time - +
  plan execution         |*Materialised definition* +
-                        (instances of +
+                         (= one run) +
+                         (instances of +
+                         definition + 
                          materialised classes, +
-                         persisted over sessions)    |Close to Plan execution time, a Work Plan definition will be _materialised_, i.e. instantiated into a form                              that can be used for execution and tracking of the Plan. At the point of materialisation, the definition                                model must be published and persisted, guaranteeing the its availability as the reference model for its                                  materialised expressions. It may be materialised any number of times, corresponding to the distinct number                              of instances of use required. Each materialisation
+                         persisted over sessions)    |Close to Plan execution time, a Work Plan definition will be _materialised_, i.e. instantiated
+                                                      for execution. At the point of materialisation, the definition model must be published and persisted, guaranteeing the its availability as the reference model for its materialised expressions. It may be materialised any number of times, corresponding to the distinct number of instances of use required.
 
-                                                      In the materialised form, repeatable sections of the definition are 'unfolded' into literal sections, for as many repetitions as required by the relevant performer(s). Accordingly, parts of the materialised expression of a Plan may have an N:1 relationship with the original definition form.
+                                                      In the materialised form, repeatable sections of the definition are 'unfolded' into literal sections, 
+                                                      for as many repetitions as required by the relevant performer(s). Accordingly, parts of the materialised expression of a Plan may have an N:1 relationship with the original definition form.
                                                       
                                                       Unreachable decision paths may be removed, and where possible decision nodes, simplifying the materialised form compared to the definition form.
                                                                                                             
-                                                      The materialised form has its own class model containing additional data items to enable run-time tracking of the Plan as it is performed. During execution time, various kinds of deletions and modifications to the materialised representation are possible, corresponding to changes in plan that respond to unexpected events.
+                                                      The materialised form has its own class model containing additional data items to enable run-time tracking 
+                                                      of the Plan as it is performed. During execution time, various kinds of deletions and modifications to the materialised representation are possible, corresponding to changes in plan that respond to unexpected events.
 |Clinical time - +
  task execution         |*Runtime instantiation* +
                         (instances of +
                          materialised classes, +
                          during session)            |Since a Plan execution may run over many hours, days or longer, the materialised expression will in 
-                                                     general correspond to something larger than the literal in-memory instantiation of (parts of) the Plan required during any given user-application the session during which some or all of the Task Plan might be performed. The part of the plan currently being displayed, performed, tracked etc, is known here as the 'run-time instantiation', and consists of a subset of the total materialised form instances.
+                                                     general correspond to something larger than the literal in-memory instantiation of (parts of) the Plan required during any given user-application session during which some or all of the Task Plan might be performed. The part of the plan currently being displayed, performed, tracked etc, is known here as the 'run-time instantiation', and consists of a subset of the total materialised form instances.
  
 |===
 
@@ -237,8 +258,8 @@ image::{diagrams_uri}/tp_modelling_wf.svg[id=tp_modelling_wf, align="center"]
 A Work Plan definition can be executed by being materialised. The model recognises three states in the execution phase, as follows.
 
 * `materialised` state: after creation of the materialised Plan, the Plan may be modified by its user(s), and pre-allocations done of performers.
-* `activated` state: the materialised Plan is _activated_ when the users want to proceed. Connections must be established between the Plan execution context and various channels or APIs via which performer allocation and communication can be achieved. Activation establishes the zero point of the execution clock, and will cause performer allocations and generate various kinds of notifications as time moves forward. During the work, Tasks become _available_ as earlier Tasks are completed or cancelled. When a Task is available to be done, the performer has various options, including doing the work, cancelling the Task as not needed, completing the Task, aborting it, and abandoning the entire Plan.
-* `terminated` state: A Plan terminates when a path taken through the materialised Task graph terminates, either due to finishing, or due to abandonment at an intermediate Task. The Plan as a whole returns a termination status of success or fail, which may be used to control behaviour if it is part of a chain in which a context switch follows termination.
+* `activated` state: the materialised Plan is _activated_ when the users want to proceed. Connections must be established between the Plan execution context and various channels or APIs via which performer allocation and communication can be achieved. Activation establishes the zero point of the execution clock, and will cause performer allocations and generate various kinds of notifications as time moves forward. During the work, Tasks become _available_ as earlier Tasks are completed or cancelled. When a Task is available to be done, the performer has various options, including doing the work, cancelling the Task as not needed, completing the Task, aborting it, and abandoning the current Task Plan.
+* `terminated` state: A Work Plan terminates when a path taken through the materialised Task graph terminates, either due to finishing, or due to abandonment at an intermediate Task. The Work Plan as a whole returns a termination status of success or fail, which may be used to control behaviour if it is part of a chain in which a context switch follows termination.
 
 === Allocation
 
@@ -260,7 +281,7 @@ As per YAWL, more sophisticated implementations of Task Planning may offer numer
 
 === Task Lifecycle
 
-Every Task in a Plan has a lifecycle described by a state machine. The states represent the state of a real world item of work, _as known by the Plan execution system_; setting them is entirely reliant on the system receiving input from performers. The successful execution path is through the states `planned` => `available` => `completed`, with other terminal states `cancelled` and `aborted` available for cases where a Task is cancelled and aborted respectively. Here, `cancelled` means 'not needed', i.e. the principal performer determined Task could be cancelled before or during execution, without compromising the Plan. Conversely, the `aborted` state indicates that the performer cannot do or complete the Task, or the rest of the Plan. Thus, `aborted` for a Task means abandonment of the current Plan.
+Every Task in a Plan has a lifecycle described by a state machine. The states represent the state of a real world item of work, _as known by the Plan execution system_; setting them is entirely reliant on the system receiving input from performers. The successful execution path is through the states `planned` => `available` => `completed`, with other terminal states `cancelled` and `aborted` available for cases where a Task is cancelled and aborted respectively. Here, `cancelled` means 'not needed', i.e. the principal performer determined Task could be cancelled before or during execution, without compromising the Plan. Conversely, the `aborted` state indicates that the performer cannot do or complete the Task, or the rest of the Plan. Thus, `aborted` for a Task means abandonment of the current Task Plan.
 
 From the viewpoint of Plan execution, the final state of a Task execution determines whether the Plan remaints in the `active` state, or whether it enters the `terminated` state. If the Task terminates with `completed` or `cancelled` state, it is considered to have _succeeded_, and the Plan remains `active`. If the Task is `aborted`, it is considered as _failed_, and the Plan terminates with a failure status.
 
@@ -271,7 +292,7 @@ A special transition `_override_` is used to force a Task to into the `available
 A Task becomes _available_ to perform when three kinds of condition are met: 
 
 * Execution control flow reaches the Task;
-* External precondition, if any, is met;
+* Any waited-on external event occurs;
 * Subject preconditions if any, are met.
 
 Control flow reaches a Task in a Plan when either preceding Tasks have been performed (local control flow) or a previously dispatched external Task completes, whose restart location in the current Plan is the current Task.
@@ -294,7 +315,7 @@ image::{diagrams_uri}/task_availability.svg[id=task_availability, align="center"
 
 One of the major challenges for any workflow system is that of being able to handle unplanned exceptions at runtime and adapt. The Task Planning model makes a key assumption that simplifies deviations at runtime, which is that the human (or other) performer always knows best. This means that Tasks posted to be done by the system are always advisory, and their details (such as time) are advisory. Accordingly, the model provides the following support for execution-time adaption:
 
-* _logical deletion_: Tasks can be skipped by two types of cancellation in the lifecycle: `cancelled` (not needed) and `aborted` (abandon plan); if `cancelled` is used, this has the benign effect of skipping past a Task;
+* _logical deletion_: Tasks can be skipped by two types of cancellation in the lifecycle: `cancelled` (not needed) and `aborted` (abandon current Task Plan); if `cancelled` is used, this has the benign effect of skipping past a Task;
 * _logical addition_: work items that are not represented as Tasks in a Task Plan can always be done, such as making extra patient observations or performing unplanned patient actions (e.g. refit a catheter, change a dressing); in openEHR they will always be recorded in the normal manner via Observation and Action Entries;
 * _overrides_: various aspects of a Plan definition can be overridden at runtime, such as Task execution time and subject preconditions (such as BP < 160 mm[Hg]). Override is represented in the system as an alternative lifecycle transition that puts a Task into the `available` state even if not all conditions have been met for availability.
 
@@ -306,7 +327,7 @@ Both Instructions and Plans may be fully or partially defined by care pathways a
 
 [.text-center]
 .openEHR Planning Artefact Relationships
-image::{diagrams_uri}/planning_artefacts.svg[id=planning_artefact_relationships, align="center", width=60%]
+image::{diagrams_uri}/planning_artefacts.svg[id=planning_artefact_relationships, align="center", width=50%]
 
 In simple cases, a Task Plan may just be the list of Tasks to fulfill one order, i.e. a single `INSTRUCTION` prescribing a course of antibiotics. The general case however is that the Work Plan corresponds to a clinical goal which implicates multiple orders, such as the CHOP chemotherapy mentioned above. 
 
