--- a/docs/task_planning/master06-model_definition.adoc
+++ b/docs/task_planning/master06-model_definition.adoc
@@ -2,7 +2,7 @@
 
 == Overview
 
-The following figure shows the key classes in the `proc.task_planning.definition` package.
+This section describes the formal model of Work Plan and Task Plan, which is presented in UML form, as well as in TP-VML definition instance form. The following figure shows the main classes in the `proc.task_planning.definition` package.
 
 [.text-center]
 .proc.task_planning.definition model overview
@@ -12,7 +12,12 @@ The remaining classes are shown in various specialised views below.
 
 == Plan Structure
 
-The top-level structure for defining plans is a `WORK_PLAN`, which includes one or more related `TASK_PLANs` making up a logical goal-oriented plan. For a Work Plan, two distinct lists of Task Plans are maintained: `_plans_`, which references all Task Plans, and `_top_level_plans_`, which is a list of those Task Plans that act as the root points for activity for the various actors. Non-top-level plans are those used as sub-plans within the hierarchy of a top-level Plan. A typical Work Plan / Task Plan structure is shown below in TP-VML form.
+The top-level structure for defining plans is a `WORK_PLAN`, which includes one or more related `TASK_PLANs` making up a logical goal-oriented plan. Within a Work Plan, two distinct lists of Task Plans are maintained: 
+
+* `_plans_`: references all Task Plans; 
+* `_top_level_plans_`: 'entry point' Task Plans that will be _active at Work Plan activation_ (often limited to only one). 
+
+Non-top-level plans are those used as sub-plans within the hierarchy of a top-level Plan. A typical Work Plan / Task Plan structure is shown below in TP-VML form.
 
 [.text-center]
 .Work Plan top level structure
@@ -21,20 +26,25 @@ image::{diagrams_uri}/work_task_plans.svg[id=work_task_plans, align="center", wi
 A Work Plan has a number of global attributes, as follows:
 
 * `_context_`: a data context for the Plan as a whole, which enables external variables (such as patient data items) to be tracked and updated;
-* `_calendar_`: a global calendar for the Plan, into which entries may be added representing fixed events such as appointments, holidays etc;
+* `_calendar_`: a global calendar containing entries that relate to this Work Plan, e.g. appointments, holidays etc;
 * `_timeline_`: the global timeline for the Plan (and hence the subject) into which planned Tasks are fixed, with times specified as offsets from the zero point;
 * `_event_wait_states_`: a reference list of all Event wait instances defined in the Plan.
 
-Both `WORK_PLAN` and `TASK_PLAN` are descendants of `CONTENT_ITEM`, which makes them a type of content that may occur in a `COMPOSITION`. Compositions used for this purpose have their `_category_` attribute set to the openEHR coded term `|Work Plan|`. This enables Work Plans to be committed to the openEHR EHR.
+Both `WORK_PLAN` and `TASK_PLAN` are descendants of `CONTENT_ITEM`, which makes them a type of content that may occur in an openEHR `COMPOSITION`. Compositions used for this purpose have their `_category_` attribute set to the openEHR coded term `|Work Plan|`. This enables Work Plans to be committed to the openEHR EHR.
 
 Plan internal structure is specified by the `_definition_` attribute of a `TASK_PLAN` is a `TASK_GROUP`, which has as its `_members_` any number of `PLAN_ITEMs`, which resolve either to more `TASK_GROUPs` (and some specialisations described below), or `TASK` entities.
 
-`PLAN_ITEM` has a mandatory `_description_` attribute, which represents a natural language specification of the work of the Task. It also has two optional attributes that control the generic behaviour of Tasks and Groups: `_wait_spec_` and `_repeat_spec_`. The first enables a wait state (described above in the 
-<<_time_and_wait_states>>) to be applied to a Task or Group, which is triggered by time-related Events (clock time, reaching a point in a calendar) or other kinds of Events (external notifications etc). This allows the timing of a Task to be specified.
+=== The Plan Calendar
 
-=== Repetition
+The Work Plan `_calendar_` consists of Plan-related entries fixed in time, as per the usual notion of a person's or organisational calendar. These will normally be a small subset of entries from a/the work management calendar of the organisation in whose IT system the Work Plans are used. A Plan calendar event can be used as the basis for a wait state (`TASK_WAIT._events_`) for Tasks in the Plan, either to indicate that something should be done on the date/time of the calendar event, or with a certain delay. Calendar events may include organisational events, national holidays and patient appointments. Wait states of the form '2 weeks after Easter Sunday' and '24 week ante-natal review (10 Feb 2019)' can therefore be defined in a Plan.
 
-The second attribute, `_repeat_spec_`, enables a Task or Group to be marked as repeating. This is not primarily intended to replace the use of individual Task instances over time, such as repeated medication administrations, but rather to be used to indicate if larger sections (typically a Group) of planned Tasks are repeatable. Where repeats are specified, they will be unrolled into literal copies in the materialised expression of the Plan.
+=== Plan Items
+
+The `PLAN_ITEM` class is the parent of all fine-grained elements of a Task Plan. It has a mandatory `_description_` attribute, which represents a natural language specification of the work of the Task. 
+
+`PLAN_ITEM` also has two optional attributes that control the timing behaviour of Task Plan elements: `_wait_spec_` and `_repeat_spec_`. The first enables a wait state (described above under <<_time_and_wait_states>>) to be applied to a Task or Group, which is triggered by time-related Events (clock time, reaching a point in a calendar) or other kinds of Events (external notifications etc). This allows the timing of a Task to be specified.
+
+The second attribute, `_repeat_spec_`, enables a Task or Group to be marked as repeating. This is not primarily intended to replace the use of individual Task instances over time, such as repeated medication administrations, but rather to be used to indicate if larger sections (i.e. Task Groups) of planned Tasks are repeatable. Where repeats are specified, they will be unrolled into literal copies in the materialised expression of the Plan.
 
 The optional `_period_` attribute defines the period of repetition. If not defined, each repetition commences according to the application of Task availability rules already defined on the individuals Tasks and/or Groups. If defined, the period should be greater than the duration of a single iteration. At execution time, a new iteration can only begin after completion of the previous one.
 
@@ -69,7 +79,7 @@ include::{uml_export_dir}/classes/plan_item.adoc[leveloffset=+1]
 
 include::{uml_export_dir}/classes/task_repeat.adoc[leveloffset=+1]
 
-== Task Group
+== Task Plan Structure
 
 The set of Tasks in a Task Plan is represented within a containment structure created using instances of the `TASK_GROUP` type, which has three key attributes. Execution of a Group is controlled by the `_execution_type_` and `_execution_rules_` attributes, which express sequential or parallel processing, and optionally other execution rules. It also has a `_training_level_` attribute which enables different visibility of Sub-Plans to users with different experience levels. This is described more fully below.
 
@@ -139,7 +149,7 @@ The combination of the Task Group / Task hierachical pattern, which implicitly d
 
 === Well-formedness
 
-A significant consequence of the Task Group construct in the TP model is that each Task Group forms a sub-network within its container, where a _network_ is understood in the graph theory sense of a directed graph with a start `s` and terminal node `t`, containing paths from `s` to `t` n which all member elements are found. This holds for descendant types of `TASK_GROUP`, including the <<_conditional_structures, Conditional Structures>> described below. This is a more limited form of connectivity than allowed in YAWL or BPMN, which do not require that matched split and join points.
+A significant consequence of the Task Group construct in the TP model is that each Task Group forms a sub-network within its container, where a _network_ is understood in the graph theory sense of a directed graph with a start `s` and terminal node `t`, containing paths from `s` to `t` n which all member elements are found. This holds for descendant types of `TASK_GROUP`, including the <<_conditional_structures, Conditional Structures>> described below. This is a more limited form of connectivity than allowed in YAWL or BPMN, which do not require matched split and join points.
 
 === Training Level
 
@@ -172,13 +182,16 @@ There are some key differences between the two kinds of Task as shown in the fol
 |Task Type      |Description                                                                   |Lifecycle state
 
 |_Performable_  |Task performed by the current performer.                                      |Advanced by actions of performer (real world actor)
-|_Dispatchable_ |A Task whose work is dispatched for execution to another performer or system. |_wait_ = `True`: Advanced by receipt of callback notifications +
+|_Dispatchable_ |A Task whose work is dispatched for execution to another performer or system. |_wait_ = `True`: Advanced by receipt of callback notification +
                                                                                                 _wait_ = `False`: Automatically advanced to `completed`
 |===
 
 === Task Lifecycle
 
-At runtime, it is the Tasks in a Plan that can be directly performed. Accordingly, it is the Task that has a lifecycle attached to it, containing states and transitions reflecting possible actions by the performer. The lifecycle does not appear in the definition model `TASK` class as a data attribute since it is a runtime variable for a Task; hence it appears in the materialised model, <<Materialised Model,described below>>.
+At runtime, it is the Tasks in a Plan that can be directly performed. Accordingly, it is the Task that has a lifecycle attached to it, containing states and transitions reflecting possible actions by the performer. 
+
+[.tbd]
+TBD: The lifecycle does not appear in the definition model `TASK` class as a data attribute since it is a runtime variable for a Task; hence it appears in the materialised model, <<Materialised Model,described below>>.
 
 It is however useful to decribe the lifecycle here, since it represents a key part of Task semantics, and the occurrence of certain kinds of events influence whether a Task fails or completes, and potentially whether the Plan continues in execution.
 
@@ -189,7 +202,7 @@ The lifecycle only has to take account of the states a Task itself can pass thro
 * `available`: available for execution, due to previous Tasks having been performed, preconditions being met, and if there is a time specification on the Task, the current time being at or later than the stated time;
 * `cancelled` (T): cancelled prior or during execution as not needed for success of the Plan;
 * `completed` (T): performed to completion;
-* `abandoned` (T): execution was stopped before or after commencement due to completion being impossible.;
+* `abandoned` (T): execution of current Task Plan was stopped before or after commencement due to completion being impossible;
 * `underway`: indicates that a Task execution has been commenced;
 * `suspended`: indicates that a Task execution has been suspended.
 
@@ -199,14 +212,22 @@ In the above, the terminal states are marked with '(T)'. The state machine is sh
 .Task lifecycle state machine
 image::{uml_diagrams_uri}/PROC-TaskStateMachine.svg[id=task_state_machine, align="center", width=80%]
 
-A key feature of the state model is that the terminal states determine whether the Plan execution continues or not: if the `abandoned` state is entered, it does not.
-
-The state machine is primarily designed to allow a stateless view of the actual execution state of a Task. That is to say, the standard pathway is `available` => `completed` or `abandoned` or `cancelled`, which enables a user to indicate the outcome of executing a Task, but not interim states during execution. The pathways through the states `underway` and `suspended` are provided to represent in-execution states, which are needed for two cases:
+The state machine is designed to represent both stateless and stateful views of the actual execution state of a Task in the real world. The standard pathway is `available` => `completed` or `abandoned` or `cancelled`, which enables a user to indicate the outcome of executing a Task, without having to report interim states during execution in the real world. The pathways through the states `underway` and `suspended` are provided to represent in-execution states, which are needed for two cases:
 
 * longer-running atomic Tasks;
 * dispatchable Tasks that are blocked waiting on another performer.
 
-It may be that one or more Tasks do not evaluate to `available` at runtime when the principal performer wants to treat them as being available. This may happen if the performer wants to execute a Task earlier than scheduled, or decides that an unmet precondition or wait condition does not matter (for example, they may know that it is met, but the Task Plan application may not yet know). Accordingly, a user override can be used, represented by the `_override_` transition from `planned` => `available`.
+==== Task Availability
+
+Each Task in a new Plan execution starts in the `initial` state. Following the design principle <<Allocation,described earlier>>, the execution engine executing a Task Plan can determine the _availability_ i.e., when the transition `planned` => `available` may occur for any Task as follows:
+
+* _control-flow_: preceding Tasks / Groups within the owning Task Group are in the `completed` or `cancelled` state;
+* _wait state_: any Task or Group wait state has been exited due to the arrival of the relevant events (including time-related);
+* _subject preconditions_: subject preconditions attached to the current Task Action are satisfied.
+
+A Task is considered `available` according to this logic even if performer and/or resources have not been allocated.
+
+The workflow application may provide an override capability so that a Task can be performed before it is determined to be available. This would enable a user to perform the Task anyway, causing the lifecycle transition `_override_` from `planned` to `available`. A corresponding `TASK_EVENT_RECORD` is created recording the use of the override.
 
 === Class Definitions
 
@@ -313,8 +334,8 @@ To allow further flexibility, The multiplicity of the `_prototype_` attribute is
 The type `DISPATCHABLE_ACTION` is the abstract parent of various Action subtypes that represent work requested to be done by some other agent, i.e. external to the current Task Plan. The three sub-types correspond to 3 different types of other performer, i.e.:
 
 * `HAND_OFF`: another principle performer in the same Work Plan;
-* `SYSTEM_REQUEST`: a computation to be performed by a system call;
 * `EXTERNAL_REQUEST`: a performer outside the current Work Plan computational environment.
+* `SYSTEM_REQUEST`: a computation to be performed by a system call;
 
 The general execution scheme for such Actions is as follows:
 
@@ -336,13 +357,13 @@ image::{diagrams_uri}/task_coordination.svg[id=task_coordination, align="center"
 
 In this Work Plan, three Task Plans are used to perform (parts of) the clinical work coordinated for managing an acute stroke, as per a Care Pathway. There are two Hand-offs, the first synchronous (`_wait_` = `True`; callback wait resumes at the next Task) and the second an asynchronous fork (`_wait_` = `False`).
 
-==== System Request
-
-The Task sub-type `SYSTEM_REQUEST` represents a request to a _system_ with a computational interface on behalf of the performer, such as a logging facility or a decision support system. The request is defined in terms of a `SYSTEM_CALL` instance.
-
 ==== External Request
 
 The Task sub-type `EXTERNAL_REQUEST` represents a request by the current performer to an external entity completely outside of the current Work Plan computational context, to request some work on behalf of the performer. This is typically an organisation of which routine requests can be made (e.g. pathology laboratory). The request has to be defined generically, in terms of an organisation identifier, a request identifier (i.e. a name or type of job) and a list of other details, represented by the standard archetypable `ITEM_STRUCTURE`.
+
+==== System Request
+
+The Task sub-type `SYSTEM_REQUEST` represents a request to a _system_ with a computational interface on behalf of the performer, such as a logging facility or a decision support system. The request is defined in terms of a `SYSTEM_CALL` instance.
 
 === Class Definitions
 
@@ -543,10 +564,7 @@ The `EVENT_ACTION` type defines a number of things the system can do on a trigge
 * displaying a message to the user, specified in the `_message_` attribute;
 * optionally indicate a specific lifecycle state for the Plan Item (a Task or Task Group) receiving the event, specified by `_receiver_thread_next_state_`;
 * optionally indicate where execution should resume in the plan, for example at an earlier Task, via the `_resume_action_` attribute, whose value is an instance of `RESUME_ACTION`, defining the `_resume_type_` and `_resume_location_` attributes.
-
-[.tbd]
-TBD: more on `_receiver_thread_next_state_`
-
+    
 === Task Wait State
 
 The principal way to wait for events is via the `TASK_WAIT` attachable to any `PLAN_ITEM` via the `_wait_spec_` attribute. The `TASK_WAIT` class represents a wait state that defines when a Task should enter the `available` state from the `planned` state in terms of Events of the types described above. Its `_events_` attribute enables multiple Events to be used as triggers, with an assumed logical OR relation among them. This enables the specification of triggers such as 'at 8pm on day 1, OR when oxygen saturation drops below 90% (whichever comes first)'. The optional `_event_relation_` attribute allows the Task to be specified as commencing `before`, `with` or `after` the trigger event (such as a meal). 
@@ -577,31 +595,104 @@ image::{diagrams_uri}/task_wait_state_reminder.svg[id=task_wait_state_reminder, 
 
 ==== Lifecycle Transition Override
 
-In some cases, it may be necessary to progress a Task to a state other than `available`. This may be dine by specifying `TASK_WAIT._next_state_`.
+In some cases, it may be necessary to progress a Task to a state other than `available`. This may be achieved by specifying `TASK_WAIT._next_state_`.
 
 === Callbacks
 
-A specialisation of `EVENT_WAIT<CALLBACK_NOTIFICATION>` is `CALLBACK_WAIT`, used to handle notifications of Dispatchable Tasks that return, as well as timeouts if no response is received. This class adds two attributes to `EVENT_WAIT<T>`:
+A callback is the mechanism to state what happens when control returns to a Dispatchable Task (such as a Hand-off or External Request) from its target. It is defined in the model by `CALLBACK_WAIT`, a specialisation of `EVENT_WAIT<CALLBACK_NOTIFICATION>`, which represents a wait state to receive notifications of Dispatch completion, as well as timeout if no response is received. The callback event is formally represented by the `CALLBACK_NOTIFICATION` class. These classes are shown in the following view of the UML model.
+
+[.text-center]
+.Callback Wait
+image::{uml_diagrams_uri}/PROC-task_planning.definition-callback_wait.svg[id=proc_definition_callback_wait, align="center"]
+
+In order to define the processing on receipt of a callback event, `CALLBACK_WAIT` adds two attributes to `EVENT_WAIT<T>`:
 
 * `_fail_action_`: enables a different `EVENT_ACTION` to be specified on receipt of a callback with a 'fail' status;
 * `_custom_actions_`: enables a custom set of `EVENT_ACTIONs` to be specified, in the form of a Hash table, with a specific Event Action for each key; the keys are assumed to represent specific return statuses of the remote Task.
 
-A Callback Wait thus has three standard Event responders: `_success_action_`, `_fail_action_` and `_timeout_`, and additionally any number of customer responders. The following diagram shows the definition structure for a dispatchable Task Action with a standard callback.
+A Callback Wait thus has three standard Event responders: `_success_action_`, `_fail_action_` and `_timeout_`, and additionally any number of customer responders (`_custom_actions_`). 
+
+A callback at execution time is achieved either internally in the TP system, or externally in the real world (e.g. by the subject returning to a clinic reception), which requires it to be manually signalled to the TP engine. The notification route is indicated by the attribute `CALLBACK_NOTIFICATION._manually_notified_`. In both cases, the `CALLBACK_NOTIFICATION` event carries the details of the event to be matched. In the manual notification, matching of `_subject_id_` etc will be carried out manually, e.g. by staff identifying the patient.
+
+Task lifecycle state processing occurs both at the point of dispatch and return and/or timeout; the details are dependent on whether `DISPATCHABLE_TASK._wait_` is set or not, on what the response event type was (_success_, _fail_, some custom event), and whether `EVENT_ACTION._receiver_thread_next_state_` is set for any event. The latter setting can be used to override the default lifecycle state processing.
+
+The following table shows the TP-VML representation and processing of the various permutations of `DISPATCHABLE_TASK._wait_`  and `_callback_`.
+
+[cols="1,3,2,2,1", options="header"]
+|===
+|Dispatchable +
+ Task           |TP-VML     |Dispatch +
+                             processing     |Response + 
+                                             processing     |Timeout handling
+
+|wait +
+ + no callback +
+ (context switch)
+a|image::{diagrams_uri}/dispatchable_wait_no_callback.svg[id=dispatchable_wait_no_callback]
+|Wait; +
+ -> `underway` state
+|-> `completed` state
+|plan default
+
+|wait +
+ + callback +
+ (context switch)
+a|image::{diagrams_uri}/dispatchable_wait_callback.svg[id=dispatchable_wait_callback]
+|Wait; +
+ -> `underway` state
+|process callback: +
+ _success_: +
+ -> `completed` state +
+ _fail_: +
+ -> `abandoned` state +
+ _timeout_: +
+ -> `abandoned` state +
+  +
+ + Event actions
+|Use `_callback.timeout_` if set
+
+|don't wait +
+ + no callback +
+ (context fork)
+a|image::{diagrams_uri}/dispatchable_no_wait_no_callback.svg[id=dispatchable_no_wait_no_callback]
+|-> `completed` state
+|
+|plan default
+
+|don't wait +
+ + callback +
+ (context fork)
+a|image::{diagrams_uri}/dispatchable_no_wait_callback.svg[id=dispatchable_no_wait_callback]
+|-> `completed` state
+|process callback +
+ Event actions
+|Use `_callback.timeout_` if set
+
+|===
+
+In the above, only the default state processing on callback is shown. This may be changed using `EVENT_ACTION._receiver_thread_next_state_`, for example to set the next state for the `fail` and `timeout` notifications to `cancelled` rather than `abandoned` (i.e. stop the current Task, but don't abandon the plan),
+
+If the attached `CALLBACK_WAIT` object includes `EVENT_ACTIONs` that have `_system_call_` or `_message_` set for any of the notifications, these are processed in the normal way. If there is no `CALLBACK_WAIT` attached, no other callback processing is performed, and the timeout timer is determined by the global default timer for this dispatch.
+
+It would be reasonable to design an implementation with a default message of the form `"Task $task_name[id=$task_id] completed with $state"`, and a global flag `_default_messages_on_` to obviate the need to always set basic messages in `EVENT_ACTION`.
+
+In the case of a context fork, the source Task has performed its work as soon as the dispatch has occurred, and its state is set to `done`. The next Task(s) become `available` in the normal way, and processing continues. At some later point in time, a status notification of timeout may be received from the remote Task. This will be processed similarly to the above, with the exception that the next state processing, _if explicit next states are set_, is  _with respect to the enclosing Task Group_, which may be the top-level Group of the Task Plan. This allows the possibility of the callback processing to cause the local execution pathway to stop with abandonment, or cancellation. The default next-state processing is 'no change', i.e. the current execution path doesn't care what happens to the remote thread. However, if `EVENT_ACTION._receiver_thread_next_state_` is set for an execution status of the remote Task, the execution of the Task Group containing the source Task may be ended (`cancel`) or the whole Plan abandoned (`abandon`). Such a transition might even be set on `success`, which provides a way to model 'first one wins' logic.
+
+The following diagram shows the definition structure for a dispatchable Task with a standard callback.
 
 [.text-center]
 .Standard callback example
 image::{diagrams_uri}/uc_task_callback_1.svg[id=timing_callback_pattern_1, align="center"]
 
-The following diagram shows the structure of a custom callback.
+The following diagram illustrates a custom callback.
 
 [.text-center]
 .Custom callback example
 image::{diagrams_uri}/uc_task_callback_2.svg[id=timing_callback_pattern_2, align="center"]
 
-=== Appointments
+==== Callback with Custom Resume Behaviour
 
-[.tbd]
-TBD
+The attribute `EVENT_ACTION._resume_action_` of type `RESUME_ACTION`, and its attribute `_resume_location_` enable custom post-callback behaviour to be stated. The default is to process the `EVENT_ACTION` (e.g. post a message, make a system call etc), and then to complete the current Task and progress to the next in the normal way. A custom resume action alows a different resumption location to be specified, as defined by the enumeration `RESUME_TYPE`. This kind of resumption is described below in the section on <<_resume_semantics>>.
 
 === Class Definitions
 
