Changes for SPECPROC-24 - Add Order tracking to model.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -12,6 +12,8 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL^]
 [.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_archetype_hrid_class[ARCHETYPE_HRID^]
+[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_blocking_branch_class[BLOCKING_BRANCH^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_blocking_group_class[BLOCKING_GROUP^]
@@ -137,6 +139,8 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_timeline_class[M_TIMELINE^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_work_plan_class[M_WORK_PLAN^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_order_ref_class[ORDER_REF^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_override_type_enumeration[OVERRIDE_TYPE^]
 [.xcode]
