--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,9 +7,17 @@
 4+^h|*PROC Release 1.?.?*
 
 |[[latest_issue]]1.3.0
+|{spec_tickets}/SPECPROC-24[SPECPROC-24^]. Add Order tracking to model.
+|M Kejžar, +
+ M Polajnar, +
+ T Beale, +
+ B Naess
+|[[latest_issue_date]]15 May 2019
+
+|1.3.0
 |{spec_tickets}/SPECPROC-22[SPECPROC-22^]. Enable Callbacks to be manually notified.
 |T Beale
-|[[latest_issue_date]]01 May 2019
+|01 May 2019
 
 |
 |{spec_tickets}/SPECPROC-23[SPECPROC-23^]. Correct `CLOCK_TIME._time_` type to `Iso8601_time`.
