--- a/docs/UML/classes/task.adoc
+++ b/docs/UML/classes/task.adoc
@@ -18,4 +18,10 @@ h|*Attributes*
 h|*1..1*
 |*action*: `TA`
 a|Task Action definition.
+
+h|*0..1*
+|*order_tags*: `List<String>`
+a|References to order(s) being created and / or tracked by this Task. The value(s) must match `ORDER_REF._order_tag_` values from the list `WORK_PLAN._order_list_` and be unique within the list.
+
+Multiple tags are only required if the same Task causes creation of, or tracks, more than one order.
 |===
